fix: fix bug where text input in builder was overflowing

--- a/packages/ui/core/src/assets/scss/ng-material-override.scss
+++ b/packages/ui/core/src/assets/scss/ng-material-override.scss
@@ -520,10 +520,25 @@ mat-option.add-auth {
 }
 
 .ql-editor {
-  padding:  0px  0px 8px 0px !important;
+  padding:  0px  0px 0px 0px !important;
   @include mat.typography-level($ap-typography, "body-1");
-  line-height: 1.9rem;
+  line-height: 1.5rem;
+ 
 }
+.has-mention
+ {
+  .ql-editor{
+    line-height: 28px;
+  }
+
+}
+app-array-form-control {
+  .has-mention{
+    .ql-editor{ padding:  0px  0px 4px 0px !important;} 
+  }
+}
+
+
 
 .mat-mdc-menu-panel.mat-mdc-menu-panel {
   max-width: unset !important;
